# job-researcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/plans/: 2026-04-06-job-researcher.md
frontend/: PLAN.md  package.json  tsconfig.json  wrangler.toml
frontend/docs/: app.js  index.html  style.css
frontend/src/: index.ts
src/job_researcher/: agent.py  config.py  main.py  models.py  pipeline.py
src/job_researcher/services/: embeddings.py  gemini.py
src/job_researcher/steps/: ats_scorer.py  company_researcher.py  github_scanner.py  interview_prepper.py  jd_fetcher.py  jd_parser.py  latex_resume.py  question_generator.py  resume_comparator.py  resume_tailor.py  verdict_generator.py
src/job_researcher/templates/: __init__.py  base.py  minimal.py
tests/: conftest.py  test_api.py  test_ats_scorer.py  test_company_researcher.py  test_gemini_service.py  test_github_scanner.py  test_integration.py  test_jd_fetcher.py  test_jd_parser.py  test_latex_resume.py  test_models.py  test_pipeline.py  test_question_generator.py  test_reportlab_template.py  test_resume_comparator.py  test_resume_tailor.py  test_tailor_api.py  test_tailor_integration.py  test_tailor_models.py  test_verdict_generator.py
update-check/: wrangler-latest.json
